--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@prisma/extension-accelerate": "^1.1.0",
     "hono": "^4.4.2",
     "prisma": "^5.14.0"
   },
