--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "common4medium": "^0.0.1",
     "hono": "^4.4.2",
     "prisma": "^5.14.0"
   },
